Bug 27589 - [GM45] Occasional flickering unless powersave=0 is used on lenovo laptops.
Summary: [GM45] Occasional flickering unless powersave=0 is used on lenovo laptops.
Status: CLOSED FIXED
Alias: None
Product: DRI
Classification: Unclassified
Component: DRM/Intel (show other bugs)
Version: unspecified
Hardware: Other Linux (All)
: medium normal
Assignee: Jesse Barnes
QA Contact:
URL:
Whiteboard:
Keywords: NEEDINFO
Depends on:
Blocks:
 
Reported: 2010-04-11 16:15 UTC by roberth
Modified: 2017-07-24 23:08 UTC (History)
5 users (show)

See Also:
i915 platform:
i915 features:


Attachments
dmesg with drm.debug=0x04 (97.15 KB, text/plain)
2010-04-11 16:15 UTC, roberth
no flags Details
Xorg.0.log (33.26 KB, text/plain)
2010-04-11 16:16 UTC, roberth
no flags Details
intel_reg_dumper output (10.42 KB, text/plain)
2010-04-11 16:17 UTC, roberth
no flags Details

Description roberth 2010-04-11 16:15:50 UTC
Created attachment 34894 [details]
dmesg with drm.debug=0x04

Forwarding this bug from Ubuntu reporter Chris Jones:
https://bugs.edge.launchpad.net/ubuntu/+source/xserver-xorg-video-intel/+bug/538648

[Problem]
Flickering screen with lenovo x301 occasionally, limited to the bottom 1/3rd to 1/2 of the screen. Additional reports of the same symptoms on lenovo x200s, G550,  and T500. Booting with i915.powersave=0 fixes it for all reporters. When an external monitor is attached the flickering on the LVDS does not occur.


DistroRelease: Ubuntu 10.04
Kernel: Ubuntu 2.6.32-19.28-generic 2.6.32.10+drm33.1
Architecture: x86_64
xf86-video-intel: 2.9.1
libdrm: 2.4.18
mesa: 7.7.1
Macine: Lenovo x301, Lenovo x200s, Lenovo T500, Lenovo G550

00:02.0 VGA compatible controller [0300]: Intel Corporation Mobile 4 Series Chipset Integrated Graphics Controller [8086:2a42] (rev 07)
 Subsystem: Lenovo Device [17aa:2114]
Comment 1 roberth 2010-04-11 16:16:31 UTC
Created attachment 34895 [details]
Xorg.0.log
Comment 2 roberth 2010-04-11 16:17:12 UTC
Created attachment 34896 [details]
intel_reg_dumper output
Comment 3 roberth 2010-05-15 08:13:33 UTC
An update after more comments on the launchpad bug, it seems to be affecting a great deal of other laptops all containing the 8086:2a42 device and not just lenovo ones.
Comment 4 Jesse Barnes 2010-06-01 12:34:07 UTC
Does this also occur in 2.6.34?  I've never seen this on my x200, but I don't discount the possibility of an FBC bug as the lp reports indicate...
Comment 5 Chris Wilson 2010-07-04 09:04:43 UTC
Come to think of it, I haven't see the flicker on my x201s for a couple of months...
Comment 6 Jesse Barnes 2010-07-08 10:07:53 UTC
And the reporters have gone silent.  I guess this one is fixed.
Comment 7 JC Berthon 2010-10-10 13:49:50 UTC
As most users have been following the Launchpad bug tracking system, we did not see your last message.
Obviously if you look at the Launchpad bug, reporters are not silent.
The bug is still here, and unless something has been done, this is not solved.

I'm just changing the status back to open just to be sure that someone will pass by here. If a change that actually solved the problem has been done (but not propagated yet to my Ubuntu installation), pardon me for my bold change. But I think this need clarification.
Comment 8 Fernando Lemos 2010-11-01 19:50:10 UTC
Hi,

I can confirm it's not yet fixed. I was able to reproduce it with 2.6.32, 2.6.34, 2.6.35 and 2.6.36 in Debian. The BTS entry contains more informations about my setup (it's a Dell Vostro 1014, 8086:2a42):

http://bugs.debian.org/cgi-bin/bugreport.cgi?bug=580601

Please let me know of any information I could provide to help squash this bug.

Thanks,
Comment 9 Chris Wilson 2011-01-19 07:14:05 UTC
I've not seen this on my x201s in the last year...

However, I've applied a fix first spotted for Ironlake to the g4x watermark on drm-intel-next:

commit 417ae1476de3ae9689a374d70565f41b3474641e
Author: Chris Wilson <chris@chris-wilson.co.uk>
Date:   Wed Jan 19 15:04:42 2011 +0000

    drm/i915: Include TLB miss latency in g4x watermark computations
    
    Reports of FIFO underruns are still persisting on gm45.
    
    References: https://bugs.freedesktop.org/show_bug.cgi?id=27589
    Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>
Comment 10 Fernando Lemos 2011-01-19 14:14:57 UTC
(In reply to comment #8)
> I can confirm it's not yet fixed. I was able to reproduce it with 2.6.32,
> 2.6.34, 2.6.35 and 2.6.36 in Debian. The BTS entry contains more informations
> about my setup (it's a Dell Vostro 1014, 8086:2a42):
> 
> http://bugs.debian.org/cgi-bin/bugreport.cgi?bug=580601

Hi,

I can no longer reproduce this issue with 2.6.37, as commented in the downstream report. Whatever got into 2.6.37 (intentionally or not) seems to have fix it. :-)

I can still reproduce it on 2.6.36 consistently.

Regards,
Comment 11 Jesse Barnes 2011-01-31 10:14:48 UTC
Great, thanks for the update.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.